added a dp container at the upper right corner of the screen (added 1.jpg to assets folder in flutter project, updated pubspec.yaml file, and ran build successfully)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ flutter:
       - assets/lower_pattern.png
       - assets/upper_pattern.png
       - assets/admin_dashboard_background.png
+      - assets/1.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
