--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
       - assets/upper_pattern.png
       - assets/admin_dashboard_background.png
       - assets/1.jpg
+      - assets/no_data.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
